@@ -456,5 +456,8 @@ Fire immunity for imps.
 One should occasionally pray to a wrong god when confused.
 When showing inventory at the endgame, equipment should also be displayed.
 If the player has a floating eye in his team and has ESP, the eye's field of vision should be added to player's LOS.
+Options for sorting massacre history
+Potion of receive random stat (better name needed)
 Options for sorting massacre history.
 There should be a special effect for zapping a banana.
+
